[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/digitalix.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/shop.gd" type="Script" id=2]
[ext_resource path="res://assets/moneybackground.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 32 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ShopList" type="VBoxContainer" parent="."]
margin_left = 0.00012207
margin_top = 78.0
margin_right = 1038.0
margin_bottom = 1068.0
rect_scale = Vector2( 1.00478, 1.04 )

[node name="MPC1" type="Button" parent="ShopList"]
margin_right = 1037.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "+1 MPC [20]"
align = 0

[node name="MPS1" type="Button" parent="ShopList"]
margin_top = 55.0
margin_right = 1037.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "+1 MPS [20]"
align = 0

[node name="template" type="Button" parent="ShopList"]
margin_top = 110.0
margin_right = 1037.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "bonjour"
align = 0

[connection signal="pressed" from="ShopList/MPC1" to="." method="_on_MPC1_pressed"]
[connection signal="pressed" from="ShopList/MPS1" to="." method="_on_MPC1_pressed"]
[connection signal="pressed" from="ShopList/template" to="." method="_on_MPC1_pressed"]
